<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/white">

    <TextView
        android:id="@+id/movieName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/allMargin"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Titanic" />

    <ImageView
        android:id="@+id/pictureMovie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/allMargin"
        android:src="@drawable/imgboats"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieName" />

    <TextView
        android:id="@+id/descriptionMove"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/allMargin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yearDate"
        tools:text="@string/description_titanic" />

    <TextView
        android:id="@+id/uuid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/allMargin"
        android:hint="@string/uuid_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pictureMovie"
        app:layout_constraintTop_toBottomOf="@+id/movieName" />

    <TextView
        android:id="@+id/director"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/allMargin"
        android:textSize="@dimen/value_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pictureMovie"
        app:layout_constraintTop_toBottomOf="@+id/uuid"
        android:hint="@string/director" />

    <TextView
        android:id="@+id/genre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/allMargin"
        android:hint="@string/genre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pictureMovie"
        app:layout_constraintTop_toBottomOf="@+id/director" />

    <TextView
        android:id="@+id/rating"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/allMargin"
        android:textSize="@dimen/value_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pictureMovie"
        app:layout_constraintTop_toBottomOf="@+id/genre"
        android:hint="@string/rating" />

    <TextView
        android:id="@+id/yearDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/allMargin"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pictureMovie"
        app:layout_constraintTop_toBottomOf="@+id/rating"
        android:hint="@string/yearDate" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateOnly="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/weatherGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:visibility="visible"
        app:constraint_referenced_ids="movieName,pictureMovie,descriptionMove,uuid,director,genre,rating,yearDate" />

</androidx.constraintlayout.widget.ConstraintLayout>